generic exp, recursion problems, tests