@@ -5,99 +5,111 @@ import java.util.Arrays;
 import java.util.List;
 
 public class RecursionProblems {
-  void printName(int i, int n) {
-    if (i > n - 1) return;
-    System.out.println("Name");
-    printName(++i, n);
+  static void nameList(int i, int n, List<String> result, String name) {
+    if (i == n) return;
+    result.add(name);
+    nameList(i + 1, n, result, name);
   }
 
-  void oneToN(int i, int n) {
-    if (i > n) return;
-    System.out.println(i);
-    oneToN(i + 1, n);
+  static void oneToN(int n, List<Integer> result) {
+    oneToN(1, n, result);
   }
 
-  void nToOne(int i, int n) {
-    if (i > n) return;
-    nToOne(i + 1, n);
-    System.out.println(i);
+  private static void oneToN(int i, int n, List<Integer> result) {
+    if (i == n + 1) return;
+    result.add(i);
+    oneToN(i + 1, n, result);
   }
 
-  void reverse(int[] arr) {
-    reverse(arr, 0);
+  static void nToOne(int n, List<Integer> result) {
+    // one way
+    /*if (n == 0) return;
+    result.add(n);
+    nToOne(n - 1, result);*/
+
+    nToOne(1, n, result);
   }
 
-  private void reverse(int[] arr, int idx) {
-    // 1, 2, 3, 4
-    if (idx == arr.length / 2) return;
-    int tmp = arr[idx];
-    arr[idx] = arr[arr.length - 1 - idx];
-    arr[arr.length - 1 - idx] = tmp;
-    reverse(arr, idx + 1);
+  private static void nToOne(int i, int n, List<Integer> result) {
+    if (i == n + 1) return;
+    nToOne(i + 1, n, result);
+    result.add(i);
   }
 
-  int sum(int[] arr) {
-    // we can just calculate easily
-//        if (arr.length == 0) return 0;
-    // [1, 2, 3, 4]
-    // 1 + [2, 3, 4]
-//        return arr[0] + sum(Arrays.copyOfRange(arr, 1, arr.length));
+  static void reverse(int[] nums) {
+    reverse(0, nums.length, nums);
+  }
+
+  private static void reverse(int i, int n, int[] nums) {
+    if (i == n / 2) return;
+    int t = nums[i];
+    nums[i] = nums[n - i - 1];
+    nums[n - i - 1] = t;
+    reverse(i + 1, n, nums);
+  }
+
+  static int sum(int[] arr) {
     return sum(arr, 0);
   }
 
-  private int sum(int[] arr, int idx) {
+  private static int sum(int[] arr, int idx) {
     if (idx == arr.length) return 0;
     return arr[idx] + sum(arr, idx + 1);
   }
 
-  boolean palindrome(String str) {
+  static boolean palindrome(String str) {
     if (str.isEmpty() || str.length() == 1) return true;
-    return palindrome(str.toCharArray(), 0);
+    return palindrome(0, str.length(), str.toCharArray());
   }
 
-  private boolean palindrome(char[] chars, int idx) {
-    if (idx == chars.length / 2) return true;
-    char first = chars[idx];
-    char last = chars[chars.length - 1 - idx];
+  private static boolean palindrome(int i, int n, char[] chars) {
+    if (i == n / 2) return true;
+    char first = chars[i];
+    char last = chars[n - 1 - i];
     if (first != last) return false;
-    return palindrome(chars, idx + 1);
+    return palindrome(i + 1, n, chars);
   }
 
-  void reverseStr(char[] str) {
-    if (str.length == 0 || str.length == 1) return;
-    reverseStr(str, 0);
+  static String reverseStr(String str) {
+    if (str.length() == 1) return str;
+    char[] chars = str.toCharArray();
+    reverseStr(0, str.length(), chars);
+    return new String(chars);
   }
 
-  private void reverseStr(char[] chars, int idx) {
-    if (idx == chars.length / 2) return;
-    char tmp = chars[idx];
-    chars[idx] = chars[chars.length - 1 - idx];
-    chars[chars.length - 1 - idx] = tmp;
-    reverseStr(chars, idx + 1);
+  private static void reverseStr(int i, int n, char[] chars) {
+    if (i == n / 2) return;
+    char tmp = chars[i];
+    chars[i] = chars[n - 1 - i];
+    chars[n - 1 - i] = tmp;
+    reverseStr(i + 1, n, chars);
   }
 
-  void subsequence(int[] arr) {
-    subsequence(arr, new ArrayList<>(), 0);
+  static List<List<Integer>> subsequence(int[] nums) {
+    List<List<Integer>> result = new ArrayList<>();
+    result.add(new ArrayList<>());
+    subsequence(0, nums.length, nums, result, new ArrayList<>());
+    return result;
   }
 
-  private void subsequence(int[] arr, List<Integer> aux, int idx) {
-    if (idx == arr.length) {
-      System.out.println(aux);
+  private static void subsequence(int i, int n, int[] nums, List<List<Integer>> result, List<Integer> temp) {
+    if (i == n) {
       return;
     }
     // take
-    aux.add(arr[idx]);
-    subsequence(arr, aux, idx + 1);
+    temp.add(nums[i]);
+    result.add(new ArrayList<>(temp));
+    subsequence(i + 1, n, nums, result, temp);
     // not take
-    aux.remove(aux.size() - 1);
-    subsequence(arr, aux, idx + 1);
+    temp.removeLast();
+    subsequence(i + 1, n, nums, result, temp);
   }
 
-  void mergeSort(int[] arr) {
+  static void mergeSort(int[] arr) {
     mergeSort(arr, 0, arr.length - 1);
   }
 
-  private void mergeSort(int[] arr, int low, int high) {
+  private static void mergeSort(int[] arr, int low, int high) {
     if (low == high) return;
     int mid = (low + high) / 2;
     mergeSort(arr, low, mid); // divide
@@ -105,7 +117,7 @@ public class RecursionProblems {
     merge(arr, low, mid, high);
   }
 
-  private void merge(int[] arr, int low, int mid, int high) {
+  private static void merge(int[] arr, int low, int mid, int high) {
     List<Integer> tmp = new ArrayList<>();
     // [1,   3, 6]      [2,    4,   5]
     // low     mid     mid+1     high
@@ -132,13 +144,13 @@ public class RecursionProblems {
     for (int i = low; i <= high; ++i) arr[i] = tmp.get(i - low);
   }
 
-  List<List<Integer>> combinationSum(int[] candidates, int target) {
+  static List<List<Integer>> combinationSum(int[] candidates, int target) {
     List<List<Integer>> result = new ArrayList<>();
     combinationSum(0, candidates, target, new ArrayList<>(), result);
     return result;
   }
 
-  private void combinationSum(int idx, int[] candidates, int target, List<Integer> aux, List<List<Integer>> result) {
+  private static void combinationSum(int idx, int[] candidates, int target, List<Integer> aux, List<List<Integer>> result) {
     if (idx == candidates.length) {
       if (target == 0) result.add(new ArrayList<>(aux));
       return;
@@ -153,14 +165,14 @@ public class RecursionProblems {
     combinationSum(idx + 1, candidates, target, aux, result); // didn't take it so we need to move forward
   }
 
-  public List<List<Integer>> combinationSum2(int[] candidates, int target) {
+  static public List<List<Integer>> combinationSum2(int[] candidates, int target) {
     Arrays.sort(candidates);
     List<List<Integer>> result = new ArrayList<>();
     combinationSum2(candidates, target, 0, result, new ArrayList<Integer>());
     return result;
   }
 
-  private void combinationSum2(int[] candidates, int target, int idx, List<List<Integer>> result, List<Integer> auxList) {
+  private static void combinationSum2(int[] candidates, int target, int idx, List<List<Integer>> result, List<Integer> auxList) {
     if (target == 0) {
       result.add(new ArrayList<>(auxList));
       return;
@@ -170,13 +182,13 @@ public class RecursionProblems {
     }
   }
 
-  public List<List<Integer>> subsets(int[] nums) {
+  public static List<List<Integer>> subsets(int[] nums) {
     List<List<Integer>> result = new ArrayList<>();
     subsets(nums, 0, new ArrayList<>(), result);
     return result;
   }
 
-  private void subsets(int[] nums, int idx, List<Integer> aux, List<List<Integer>> result) {
+  private static void subsets(int[] nums, int idx, List<Integer> aux, List<List<Integer>> result) {
     if (idx >= nums.length) {
       result.add(new ArrayList<>(aux));
 //            Integer sum = aux.stream().reduce(0, Integer::sum);
@@ -193,14 +205,14 @@ public class RecursionProblems {
     subsets(nums, idx + 1, aux, result);
   }
 
-  public List<List<Integer>> subsetsWithDup(int[] nums) {
+  public static List<List<Integer>> subsetsWithDup(int[] nums) {
     Arrays.sort(nums);
     List<List<Integer>> result = new ArrayList<>();
     subsetsWithDup(nums, 0, new ArrayList<>(), result);
     return result;
   }
 
-  private void subsetsWithDup(int[] nums, int idx, List<Integer> aux, List<List<Integer>> result) {
+  private static void subsetsWithDup(int[] nums, int idx, List<Integer> aux, List<List<Integer>> result) {
     result.add(new ArrayList<>(aux));
     for (int i = idx; i < nums.length; ++i) {
       if (i > idx && nums[i - 1] == nums[i]) continue;
@@ -210,14 +222,14 @@ public class RecursionProblems {
     }
   }
 
-  public List<List<Integer>> permute(int[] nums) {
+  public static List<List<Integer>> permute(int[] nums) {
     List<List<Integer>> result = new ArrayList<>();
     boolean[] freq = new boolean[nums.length];
     permute(nums, new ArrayList<>(), freq, result);
     return result;
   }
 
-  private void permute(int[] nums, List<Integer> aux, boolean[] map, List<List<Integer>> result) {
+  private static void permute(int[] nums, List<Integer> aux, boolean[] map, List<List<Integer>> result) {
     if (aux.size() == nums.length) {
       result.add(new ArrayList<>(aux));
       return;
